Helium - Frontend article editor, article search button misaligned and partly covered Fixes #1913

--- a/themes/helium/joomla/scss/helium-joomla/styles/_forms.scss
+++ b/themes/helium/joomla/scss/helium-joomla/styles/_forms.scss
@@ -69,6 +69,12 @@ input[type="color"],
     }
 }
 
+#filter_search {
+    width: auto;
+    padding: 4px 12px;
+    line-height: normal;
+}
+
 textarea {
     width: 100%;
 }
